Formatting and clean up

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.0.0/journal/bootstrap.min.css"
     />
-    <title>React Reading List</title>
+    <title>Be Green</title>
   </head>
 
   <body>
